[package]
name = "dbgonly"
version = "0.1.0"
description = "The dbg macro, but only when debug_assertions are set"
repository = "https://github.com/galenguyer/dbgonly"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
